// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`prettier default 1`] = `
Array [
  ".prettierignore",
  ".prettierrc.js",
  "package.json",
]
`;

exports[`prettier with-githooks 1`] = `
Array [
  ".huskyrc",
  ".prettierignore",
  ".prettierrc.js",
  "package.json",
]
`;
